[package]
name = "rust-vulkano-basic-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.0"
image = "0.24.5"
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"

[profile.dev]
opt-level = 1 
